# php-stack

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_PLAN.md  COMPLETION-REPORT.md  DOCUMENTS_LOCATION.md  Dev.log.md  IMPLEMENTATION_SUMMARY.md  MIRROR_CONFIG_LIST_REFACTOR.md  MIRROR_CONFIG_REFACTOR.md  MIRROR_GUIDE.md  QUICKSTART-V2.md  QUICK_REFERENCE.md  README.md  VERSION_SCOPE.md  VERSION_SELECTION_OPTIMIZATION.md  fix_start_env.py  index.html  package-lock.json  package.json  vite.config.ts
doc/: README.md  (+1 more)
src-tauri/: .user_version_overrides.example.json  .user_version_overrides.json  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/: CONFIG_FILE_PATH_ARCHITECTURE.md  DEVELOPMENT_LOGGING_GUIDE.md  FIX_CONFIG_GENERATOR_PATH.md  FIX_ENV_CONFIG_AUTO_SELECT.md  FIX_USER_OVERRIDE_NOT_APPLIED.md  FIX_VERSION_KEY_MATCHING.md  REDIS_82_CONFIG_EXTRACTION.md  REFACTOR_REMOVE_EXAMPLE_FILE.md  SHORT_TERM_OPTIMIZATION_REPORT.md  USER_OVERRIDE_GUIDE.md  VERIFY_USER_OVERRIDE.md  VERSION_MANIFEST_VERIFICATION.md  VERSION_VERIFICATION_REPORT.md
src-tauri/icons/: icon.icns
src-tauri/services/: mirror_config.json  version_manifest.json
src-tauri/services/mysql/: mysql.cnf
src-tauri/services/mysql80/: mysql.cnf
src-tauri/services/mysql84/: mysql.cnf
src-tauri/services/nginx/: Dockerfile  nginx.conf
src-tauri/services/nginx124/: Dockerfile
src-tauri/services/nginx125/: Dockerfile
src-tauri/services/nginx126/: Dockerfile
src-tauri/src/: commands.rs  lib.rs  logging.rs  macros.rs
(+135 files in other folders)
