[package]
name = "app"
version = "0.3.0"
description = "PHP-Stack - PHP Development Environment Manager"
authors = ["jeeinn"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
bollard = "0.20"
tokio = { version = "1", features = ["full"] }
zip = "2.2"
handlebars = "6.2"
glob = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
pathdiff = "0.2"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[[test]]
name = "backup_restore_integration"
path = "tests/integration/backup_restore_integration.rs"

[[test]]
name = "config_generation_integration"
path = "tests/integration/config_generation_integration.rs"
